Changes for 1.1alpha6:

 - modified data.sql to exclude zabbix_suckerd and zabbix_agentd (Alexei)
 - fixed SQL warning when updating actions (Alexei)
 - fixed change of plain text data in screens (Alexei)
 - fixed mouse navigation for multiple maps in one screen (Alexei)
 - configurable timestamp format in local_en.inc.php (Alexei)
 - support for no labels and no status in network maps (Alexei)
 - fix for startup of housekeeping process (Alexei)
 - fix of agent crash on 64 bit platforms in CKSUM() (Alexei)
 - added frontends/php/overview.php (Alexei)
 - removed link to unexistant trends.php (Alexei)
 - support for unlimited number of user parameters (Alexei)
 - support of passing of parameters to user-defined commands (Alexei)
 - improved zabbix.spec. Thanks to Dirk Datzert. (Alexei)
 - fixed detection of __va_copy() (Alexei)

Changes for 1.1alpha5:
 
 - fixed mouse navigation for multiple maps in one screen (Alexei)
 - fixed unmodified item parameter "Keep trends (in days)" (Alexei)
 - fixed support of negative values for SNMP integers (Alexei)
 - added support of function dayofweek() for triggers (Alexei)
 - configurable format of icon labels for maps (Alexei)
 - added column sysmaps.label_type (Alexei)
 - keep host selection when adding/deleting/updating item (Alexei)
 - fix for complation of the agent under Solaris (Alexei)
 - do not use hardcoded port 161 when adding from template (Alexei)
 - changed logic update host.available instead of host.status (Alexei)
 - added column hosts.available (Alexei)
 - added link to ZABBIX Manual v1.1 into page header (Alexei)
 - fixed evaluation of nodata(). Thanks to Igor Micko. (Alexei)
 - fixed time selection for custom graphs (Alexei)
 - configurable format of map output (png, jpg) (Alexei)
 - special processing of 'b' and 'bps' (bytes). Take 1000 for Kilos (Alexei)
 - fix of crash of zabbix_server when processing notification macros (Alexei)
 - added form for managing images (Alexei)
 - added frontends/image.php (Alexei)